--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 
 <html>
 <head>
-<title>This is Alexandras drugs page</title>
+<title>This is Alexandras Page</title>
 <style>
 
 </style>
 </head>
 
 <body>
-<h1 class='elegantshadow'>Helloy World, This is Alexandras drugs page ^^ </h1>
+<h1 class='elegantshadow'>Helloy World, This is Alexandras cute ^^ </h1>
 <hr>
 <p1> This is my page about  my works, and my creativity. I like cute things :3</p1>
 <p1> I'm also available for hire</p1>
-<p1> making drugs with my art</p1>
+<p1> I'm currently working on my page, stick around ^^t</p1>
 <ul>
 	<li>I make professional designs</li>
 	<li>I can make custom clothing & textiles</li>
