--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/coffeehouse.jpg");
+  background-image: url("https://cdn.pixabay.com/photo/2015/11/03/10/23/watercolor-1020509_1280.jpg");
   min-height: 75%;
 }
 
