--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-    <p>Web Page Design <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">KeyB</a></p>
+    <p>Web Page Design <a href="https://royalcloudsolutions.com/" title="W3.CSS" target="_blank" class="w3-hover-text-green">Royal Cloud Solutions</a></p>
     </footer>
 
     <script>
