--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     min-height: 100%;
     }
 
+    .bgimg2 {
+    background-position: center;
+    background-size: cover;
+    background-image: url("https://cdn.pixabay.com/photo/2017/11/07/18/40/brush-2927793_1280.jpg");
+    min-height: 100%;
+    }
+
     .menu {
     display: none;
     }
@@ -133,6 +140,10 @@
         <span class="w3-text-white">15 Adr street, 5015</span>
     </div>
     </header>
+
+    <!-- Header with image -->
+    <div class="bgimg2 w3-display-container w3-grayscale-min" id="home">
+        </div>
 
     <!-- Add a background color and large text to the whole page -->
     <div class="w3-sand w3-grayscale w3-large">
@@ -281,7 +292,7 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-    <p>Web Design <a href="https://royalcloudsolutions.com/" title="W3.CSS" target="_blank" class="w3-hover-text-green">Royal Cloud Solutions</a></p>
+    <p>Web Design <a href="https://royalcloudsolutions.com/" title="W3.CSS" target="_blank" class="w3-hover-text-green">Royal Cloud</a></p>
     </footer>
 
     <script>
