--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Royal Cloud Solutions</h1>
         <div>
         <p> Welcome to your smart new room solution</p>
-        <p> This is an administrators read and write test. </p>
+        <p> </p>
         </div>
         <label for="inp" class="inp">
             <input type="text" placeholder="&nbsp;" id = "nameField">
@@ -36,6 +36,6 @@
           
         <button onclick = "writeData()" class="brk-btn">Submit Data</button>
         <p id = "data"></p>
-            <div><aref="https://console.firebase.google.com/u/0/project/frbasewebapprlcrowdsolutions20/database/frbasewebapprlcrowdsolutions20/data" class="underlined-a">&nbsp;&nbsp;Link To Firebase&nbsp;&nbsp;</a></div>
+            <div><a href="https://console.firebase.google.com/u/0/project/frbasewebapprlcrowdsolutions20/database/frbasewebapprlcrowdsolutions20/data" class="underlined-a">&nbsp;&nbsp;Link To Firebase&nbsp;&nbsp;</a></div>
     </body>
 </html>
