--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="firebaseConfig.js"></script>
         <script src="readWrite.js"></script>
         
-        <h1>Royal Cloud Solutions</h1>
+        <h1>NTNU & Royal Cloud Solutions</h1>
         <div>
         <p> Welcome to your smart new room solution</p>
         <p> </p>
